Γëí╞Æ├£├çfeat(analytics) integrate Google Analytics gtag.js for tracking

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T6CJBMBKCG"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-T6CJBMBKCG');
+	</script>
 </head>
 
 <body>
@@ -41,7 +51,7 @@
 						<a href="#contact" class="text-primary">Contact Me</a>
 					</div>
 					<div class="mt-4 social-links">
-						<a href="https://www.linkedin.com/in/muhammad-sharique/"target="_blank">
+						<a href="https://www.linkedin.com/in/muhammad-sharique/" target="_blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 								class="bi bi-linkedin" viewBox="0 0 16 16">
 								<path
@@ -67,7 +77,9 @@
 		<section id="about" class="py-5">
 			<div class="container">
 				<h2>About Me</h2>
-				<p>I'm a software engineer who's passionate about technology and enjoys tackling problems through thoughtful, well-optimized solutions. I'm always exploring new ideas and better ways to build things.</p>
+				<p>I'm a software engineer who's passionate about technology and enjoys tackling problems through
+					thoughtful, well-optimized solutions. I'm always exploring new ideas and better ways to build
+					things.</p>
 				<p>Here are some of things I have made and done over the years.</p>
 			</div>
 		</section>
@@ -79,14 +91,14 @@
 					<div class="col-md-6 col-lg-4">
 						<div class="card">
 							<div class="card-body">
-								<h5 class="card-title">💽 3-2-1  Sync</h5>
+								<h5 class="card-title">💽 3-2-1 Sync</h5>
 								<p class="card-text">
 									A Python-based backup solution that implements the 3-2-1 backup strategy:
-									<ul>
-										<li>3 copies of your data</li>
-										<li>2 local copies on different devices/drives</li>
-										<li>1 offsite copy (using Google Drive)</li>
-									</ul>
+								<ul>
+									<li>3 copies of your data</li>
+									<li>2 local copies on different devices/drives</li>
+									<li>1 offsite copy (using Google Drive)</li>
+								</ul>
 								</p>
 								<a href="https://github.com/muhammad-sharique/3-2-1-sync">Project's Github Link</a>
 							</div>
@@ -97,7 +109,8 @@
 							<div class="card-body">
 								<h5 class="card-title">🩺 Covid Help</h5>
 								<p class="card-text">
-									A Python based web app for tracking covid supplies. It allowed the essential covid supplies to be tracked and shared among users.
+									A Python based web app for tracking covid supplies. It allowed the essential covid
+									supplies to be tracked and shared among users.
 									<br>
 									Its written in Python using Flask and uses SQlite as the database.
 								</p>
@@ -110,7 +123,9 @@
 							<div class="card-body">
 								<h5 class="card-title">🔍 HICCO</h5>
 								<p class="card-text">
-									It's a web search engine implementation that provides search results for web pages, images, videos, and news. It's built using Python Flask and includes web crawling capabilities, search result scraping, and a responsive web interface.
+									It's a web search engine implementation that provides search results for web pages,
+									images, videos, and news. It's built using Python Flask and includes web crawling
+									capabilities, search result scraping, and a responsive web interface.
 								</p>
 								<a href="https://github.com/muhammad-sharique/hicco">Project's Github Link</a>
 							</div>
@@ -121,9 +136,12 @@
 							<div class="card-body">
 								<h5 class="card-title">💖 PUUUNG Live</h5>
 								<p class="card-text">
-									PUUUNG Live is a tribute project inspired by the beautiful animated shorts created by Puuung, a South Korean artist known for heartwarming animations centered around love, friendship, and everyday moments.
+									PUUUNG Live is a tribute project inspired by the beautiful animated shorts created
+									by Puuung, a South Korean artist known for heartwarming animations centered around
+									love, friendship, and everyday moments.
 									<br>
-									Written in simple Js, It uses Youtube's Iframe API to emulate the experience of watching Puuung's animations in a live stream format.
+									Written in simple Js, It uses Youtube's Iframe API to emulate the experience of
+									watching Puuung's animations in a live stream format.
 								</p>
 								<a href="https://github.com/muhammad-sharique/puuung-live">Project's Github Link</a>
 							</div>
@@ -134,9 +152,12 @@
 							<div class="card-body">
 								<h5 class="card-title"> ⌨️ Typing Test</h5>
 								<p class="card-text">
-									This was the very first project I ever built. At the age of 15, I created a simple Windows app that allows users to take a typing test and then displays detailed statistics at the end.
+									This was the very first project I ever built. At the age of 15, I created a simple
+									Windows app that allows users to take a typing test and then displays detailed
+									statistics at the end.
 									<br>
-									Written in C Using Graphics.h library. It was a great challenge to Make a GUI without any high level libraries.
+									Written in C Using Graphics.h library. It was a great challenge to Make a GUI
+									without any high level libraries.
 								</p>
 								<a href="https://github.com/muhammad-sharique/typing-test">Project's Github Link</a>
 							</div>
@@ -170,11 +191,14 @@
 						GitHub
 					</a>
 				</div>
-				<p>The best way to contact me is to email me directly. I will try to get back to  you as soon as possible!</p>
+				<p>The best way to contact me is to email me directly. I will try to get back to you as soon as
+					possible!</p>
 				<div class="email-link mb-2">
 					<a href="mailto:me@muhammadsharique.com">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
-							<path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+							class="bi bi-envelope" viewBox="0 0 16 16">
+							<path
+								d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
 						</svg>
 						me@muhammadsharique.com
 					</a>
@@ -188,15 +212,18 @@
 								<form id="contact-form" action="https://formspree.io/f/xblongwn" method="POST">
 									<div class="mb-3">
 										<label for="name" class="form-label">Name</label>
-										<input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
+										<input type="text" class="form-control" id="name" name="name"
+											placeholder="Your Name">
 									</div>
 									<div class="mb-3">
 										<label for="email" class="form-label">Email*</label>
-										<input type="email" class="form-control" id="email" name="email" required placeholder="name@example.com">
+										<input type="email" class="form-control" id="email" name="email" required
+											placeholder="name@example.com">
 									</div>
 									<div class="mb-3">
 										<label for="message" class="form-label">Message*</label>
-										<textarea class="form-control" id="message" name="message" rows="4" required placeholder="Anything you would like to say to me..."></textarea>
+										<textarea class="form-control" id="message" name="message" rows="4" required
+											placeholder="Anything you would like to say to me..."></textarea>
 									</div>
 									<button type="submit" class="btn btn-primary">Send Message</button>
 								</form>
